Fix for topology list view alert/build cell alignment

--- a/frontend/packages/dev-console/src/components/topology/list-view/cells/AlertsCell.scss
+++ b/frontend/packages/dev-console/src/components/topology/list-view/cells/AlertsCell.scss
@@ -11,10 +11,9 @@
 
   &--status .co-icon-and-text {
     display: inline-flex;
-    margin-right: 12px;
-
-    .odc-topology-list-view__alert-cell__builds & {
-      margin-right: 4px;
-    }
+    margin-right: var(--pf-global--spacer--sm);
+  }
+  &__label {
+    margin-right: var(--pf-global--spacer--sm);
   }
 }
